samples/_failures_safe/1761088859_fbe9d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a2c3d70.c: In function ‘main’:
./samples/SAFE/__tmp_6a2c3d70.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
